--- a/style.css
+++ b/style.css
@@ -40,3 +40,15 @@ body {
     text-align: justify;
   }
 /* /MAIN */
+
+/* FOOTER */
+  footer a {
+    text-decoration: none;
+    color: whitesmoke;
+    transition: all .5s ease-out;
+  }
+  footer a:hover {
+    color: black;
+    transition: all .5s ease-out;
+  }
+/* /FOOTER */
